WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72604
[Qt][WK2] Touch/Mouse events are delivered with wrong coordinates.
https://bugs.webkit.org/show_bug.cgi?id=72604
Summary
[Qt][WK2] Touch/Mouse events are delivered with wrong coordinates.
Zeno Albisser
Reported
2011-11-17 05:40:15 PST
Touch/Mouse events are delivered with an offset in the coordinate system after panning/zooming.
Attachments
patch for review.
(2.33 KB, patch)
2011-11-17 06:02 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-11-17 06:02:15 PST
Created
attachment 115573
[details]
patch for review.
Zeno Albisser
Comment 2
2011-11-17 06:15:46 PST
Comment on
attachment 115573
[details]
patch for review. Clearing flags on attachment: 115573 Committed
r100612
: <
http://trac.webkit.org/changeset/100612
>
Zeno Albisser
Comment 3
2011-11-17 06:15:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug