[Qt][WK2] Touch/Mouse events are delivered with wrong coordinates. https://bugs.webkit.org/show_bug.cgi?id=72604

When using the QtViewportInterationEngine for zooming/panning,
no additional scroll offset should be applied to input events
by the ScrollView.

This patch is based on work by Andreas Kling.

Reviewed by Kenneth Rohde Christiansen.

* platform/ScrollView.cpp:
(WebCore::ScrollView::windowToContents):
(WebCore::ScrollView::contentsToWindow):

Canonical link: https://commits.webkit.org/89118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100612 268f45cc-cd09-0410-ab3c-d52691b4dbfc